# rag-futebol

./: mkdocs.yml  pyproject.toml
rag_futebol/: app.py
